--- a/ai-it.html
+++ b/ai-it.html
@@ -63,8 +63,9 @@
     </header>
 
     <main>
-        <section id="hero" class="text-white ai-it-hero" style="background-image: url('images/ai-it-hero.jpg'); background-size: cover; background-position: center;">
-            <div class="container text-center py-5 py-md-6">
+        <section id="hero" class="text-white ai-it-hero position-relative" style="background-image: url('images/ai-it-hero.jpg'); background-size: cover; background-position: center;">
+            <div class="hero-overlay position-absolute top-0 start-0 w-100 h-100" style="background: rgba(0,0,0,0.45); z-index:1;"></div>
+            <div class="container text-center py-5 py-md-6 position-relative" style="z-index:2;">
                 <h1 class="display-3 fw-bold mb-3">Training the Next Digital Generation</h1>
                 <p class="lead mb-0 mx-auto" style="max-width: 800px;">Providing essential digital literacy, specialized IT skills, and an introduction to Artificial Intelligence to empower Eswatini's future workforce.</p>
             </div>
@@ -107,14 +108,14 @@
                         <h2 class="section-title text-primary mb-3">Hands-On, Practical Learning</h2>
                         <p class="lead">Our methodology ensures graduates are job-ready and capable of applying their knowledge immediately. We focus on project-based learning and real-world scenarios.</p>
                         <ul>
-                            <li>**Practical Workshops:** 70% of training time is dedicated to hands-on exercises and coding sessions.</li>
-                            <li>**Industry Expert Guest Lecturers:** Learn directly from professionals working in the African tech sector.</li>
-                            <li>**Post-Course Mentoring:** Continued support to help graduates find jobs or integrate IT into their new businesses.</li>
+                            <li>Practical Workshops: 70% of training time is dedicated to hands-on exercises and coding sessions.</li>
+                            <li>Industry Expert Guest Lecturers: Learn directly from professionals working in the African tech sector.</li>
+                            <li>Post-Course Mentoring: Continued support to help graduates find jobs or integrate IT into their new businesses.</li>
                         </ul>
                         <a href="#enrollment-form" class="btn btn-secondary btn-lg mt-3 hover-lift">View Enrollment Dates</a>
                     </div>
                     <div class="col-lg-6 order-lg-1">
-                        <img src="team_pics/yolie.jpg" alt="A training class learning about AI" class="img-fluid rounded shadow-lg hover-lift">
+                        <img src="team_pics/yolie.jpg" alt="A training class learning about AI" class="img-fluid rounded shadow-lg hover-lift program-image">
                     </div>
                 </div>
             </div>
