--- a/business.html
+++ b/business.html
@@ -75,12 +75,12 @@
                 <div class="row align-items-center">
                     <div class="col-lg-6 mb-4 mb-lg-0">
                         <h2 class="section-title text-primary mb-3">From Idea to Thriving Enterprise</h2>
-                        <p class="lead">Our Business Support program is a comprehensive package designed to overcome the hurdles faced by local startups. We believe in providing more than just money—we provide a pathway to self-sufficiency.</p>
+                        <p class="lead">Our Business Support program is a comprehensive package designed to overcome the hurdles faced by local startups. We believe in providing more than just money, we provide a pathway to self-sufficiency.</p>
                         <p>We focus on rigorous training in financial management, market penetration, and sustainable practices, ensuring every entrepreneur is equipped to handle growth.</p>
                         <a href="#application-form" class="btn btn-primary btn-lg mt-3 hover-lift">Start Your Application</a>
                     </div>
                     <div class="col-lg-6">
-                        <img src="team_pics/men.webp" alt="Mentorship session with an entrepreneur" class="img-fluid rounded shadow-lg hover-lift">
+                        <img src="team_pics/men.webp" alt="Mentorship session with an entrepreneur" class="img-fluid rounded shadow-lg hover-lift program-image">
                     </div>
                 </div>
             </div>
@@ -141,8 +141,8 @@
                             </div>
                             <div class="mb-3">
                                 <label for="loanAmount" class="form-label">Requested Amount (Eswatini Lilangeni - E)</label>
-                                <input type="number" class="form-control" id="loanAmount" min="5000" max="100000">
-                                <div class="form-text">Minimum E5,000, Maximum E100,000.</div>
+                                <input type="number" class="form-control" id="loanAmount" min="100" max="5000">
+                                <div class="form-text">Minimum E100, Maximum E5,000.</div>
                             </div>
                             <div class="mb-3">
                                 <label for="businessIdea" class="form-label">Briefly describe your business idea and how the funds will be used (Max 500 words) <span class="text-danger">*</span></label>
