--- a/contact.html
+++ b/contact.html
@@ -82,8 +82,8 @@
                                 <i class="fas fa-map-marker-alt fa-2x text-warning me-3 pt-1"></i>
                                 <div>
                                     <h5 class="fw-bold text-dark">Office Location</h5>
-                                    <p class="text-muted mb-0">Ground Floor, Eswatec Innovation Hub<br>
-                                    Mbabane, Hhohho, Eswatini</p>
+                                    <p class="text-muted mb-0">Bulembu, The General Office<br>
+                                    Pigg's Peak, Hhohho, Eswatini</p>
                                 </div>
                             </div>
                             <div class="d-flex align-items-start mb-4">
@@ -97,14 +97,14 @@
                                 <i class="fas fa-phone-alt fa-2x text-warning me-3 pt-1"></i>
                                 <div>
                                     <h5 class="fw-bold text-dark">Call Us</h5>
-                                    <p class="text-muted mb-0"><a href="tel:+268 7600 0000" class="text-primary">+268 7600 0000</a> (Mon - Fri, 9am - 4pm)</p>
+                                    <p class="text-muted mb-0"><a href="cell:+268 78231873" class="text-primary">+268 78231873</a> (Mon - Fri, 9am - 4pm)</p>
                                 </div>
                             </div>
                         </div>
 
                         <div class="social-links mt-5">
                             <h5 class="fw-bold text-dark mb-3">Follow Us</h5>
-                            <a href="https://facebook.com/iyf-eswatini" target="_blank" class="me-3 text-primary"><i class="fab fa-facebook-f fa-2x hover-lift"></i></a>
+                            <a href="https://facebook.com/share/17UGx7CVs8/?mibextid=wwXIfr" target="_blank" class="me-3 text-primary"><i class="fab fa-facebook-f fa-2x hover-lift"></i></a>
                             <a href="https://twitter.com/iyf-eswatini" target="_blank" class="me-3 text-primary"><i class="fab fa-twitter fa-2x hover-lift"></i></a>
                             <a href="https://linkedin.com/company/iyf-eswatini" target="_blank" class="me-3 text-primary"><i class="fab fa-linkedin-in fa-2x hover-lift"></i></a>
                             <a href="https://instagram.com/iyf-eswatini" target="_blank" class="text-primary"><i class="fab fa-instagram fa-2x hover-lift"></i></a>
