--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
         <section id="focus" class="bg-light">
             <div class="container">
-                <h2 class="section-title text-center text-primary mb-2">Our Focus</h2>
+                <h2 class="section-title text-center text-primary mb-2"><span class="yellow-circle-animate">Our Focus<span class="circle-effect"></span></span></h2>
                 <p class="section-subtitle text-center lead mb-5">Empowering individuals through two key pillars of development.</p>
                 
                 <div class="row row-cols-1 row-cols-md-2 g-5 justify-content-center focus-cards">
@@ -110,7 +110,7 @@
 
         <section id="mission-vision" class="bg-white">
             <div class="container">
-                <h2 class="section-title text-center text-primary mb-4">Our Mission and Vision</h2>
+                <h2 class="section-title text-center text-primary mb-4"><span class="yellow-circle-animate">Our Mission and Vision<span class="circle-effect"></span></span></h2>
                 <div class="row g-5 mv-cards">
                     <div class="col-md-6">
                         <div class="card h-100 p-4 shadow-sm hover-lift">
